fixed chat window alignment

--- a/src/App.css
+++ b/src/App.css
@@ -46,6 +46,7 @@
     height: 100vh;
     text-align: center;
     position: fixed;
+   
     right: 0;
     top: 0;
     z-index: 0;
@@ -150,12 +151,14 @@
 
 .message-box {
     display: flex;
-    flex-direction: row;
-}
-    .message-box-message {
+    flex-direction: column;
     text-align: left;
-    border: 1px solid black;
-    background-color: rgb(165, 238, 232);
-    border-radius: 10px;;
-    padding: 5px;
+}
+
+.message-box-message {
+text-align: left;
+border: 1px solid black;
+background-color: rgb(165, 238, 232);
+border-radius: 10px;;
+padding: 5px;
 }
